--- a/home.css
+++ b/home.css
@@ -7,21 +7,27 @@ button{
         color: #fff;
         font-size: 18px;
         border-radius: 140px; 
-        text-align: center;
+        
 }
 body{
   background-image: url(star-vehicle-pkw-mercedes-163774.jpeg);
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+display:flex;
+justify-content: center;
+flex-direction: column;
+align-items: center;
 }
 
 h1{
 
+  
+    margin: 0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size:  200px;
+    color: azure;
 
-     margin: 0;
-     padding: 0 0 20px;
-     text-align: center;
-     font-size:  22px;
- 
+
 }
